--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-cli": "^6.24.1",
     "babel-preset-es2015": "^6.6.0",
     "faker": "^3.1.0",
-    "sqlite3": "^3.1.3"
+    "sqlite3": "^3.1.8"
   },
   "devDependencies": {
     "babel-cli": "^6.6.5",
