--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-cli": "^6.24.1",
     "babel-preset-es2015": "^6.6.0",
     "faker": "^3.1.0",
+    "mocha": "^3.3.0",
     "sqlite3": "^3.1.8"
   },
   "devDependencies": {
