--- a/package.json
+++ b/package.json
@@ -6,17 +6,28 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "sahbanagold <sahbanalo@gmail.com>",
   "license": "ISC",
   "dependencies": {
     "babel-preset-es2015": "^6.6.0",
     "faker": "^3.1.0",
-    "sqlite3": "^3.1.3"
+    "sqlite3": "^3.1.8"
   },
   "devDependencies": {
     "babel-cli": "^6.6.5",
     "babel-core": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
     "http-server": "^0.9.0"
-  }
+  },
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/gray-fox-2017/orm-jr.git"
+  },
+  "bugs": {
+    "url": "https://github.com/gray-fox-2017/orm-jr/issues"
+  },
+  "homepage": "https://github.com/gray-fox-2017/orm-jr#readme"
 }
