--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "A skeleton code for trying out sequelize ORM",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
-  "author": "",
+  "author": "raynormw",
   "license": "ISC",
   "dependencies": {
     "babel-preset-es2015": "^6.6.0",
