--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-cli": "^6.24.1",
     "babel-preset-es2015": "^6.6.0",
+    "es2015": "0.0.0",
     "faker": "^3.1.0",
     "sqlite3": "^3.1.3"
   },
   "devDependencies": {
     "babel-cli": "^6.6.5",
     "babel-core": "^6.7.4",
-    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-es2015": "^6.24.1",
     "http-server": "^0.9.0"
   }
 }
