--- a/package.json
+++ b/package.json
@@ -18,5 +18,16 @@
     "babel-core": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
     "http-server": "^0.9.0"
-  }
+  },
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/gray-fox-2017/orm-jr.git"
+  },
+  "bugs": {
+    "url": "https://github.com/gray-fox-2017/orm-jr/issues"
+  },
+  "homepage": "https://github.com/gray-fox-2017/orm-jr#readme"
 }
