--- a/package.json
+++ b/package.json
@@ -1,22 +1,34 @@
 {
-  "name": "sequelize_jr",
-  "version": "0.0.1",
-  "description": "A skeleton code for trying out sequelize ORM",
+  "name": "orm-jr",
+  "version": "1.0.0",
+  "description": "",
   "main": "index.js",
+  "directories": {
+    "test": "test"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/gray-fox-2017/orm-jr.git"
+  },
+  "keywords": [
+    "nodejs",
+    "sqlite",
+    "babel"
+  ],
+  "author": "antoniangga",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/gray-fox-2017/orm-jr/issues"
+  },
+  "homepage": "https://github.com/gray-fox-2017/orm-jr#readme",
   "dependencies": {
-    "babel-preset-es2015": "^6.6.0",
-    "faker": "^3.1.0",
-    "sqlite3": "^3.1.3"
+    "babel-cli": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.6.5",
-    "babel-core": "^6.7.4",
-    "babel-preset-es2015": "^6.6.0",
-    "http-server": "^0.9.0"
+    "babel-preset-es2015": "^6.24.1"
   }
 }
